Review: OpenAPI and javadoc cleanup
Move descriptions from openapi.yaml to java code.
